 * New OSD system

Video output:
 * Fixed problems with OpenGL output
 * New --monitor-aspect-ratio option

Input:
 * Improved DVB support for satellite bands other than Ku-band
 * IPv6 and Extended passive mode support for FTP
 * IPv6 Source Specific Multicast support
 * GnomeVFS input module

Decoders:
 * Support for libSDL_image to import different image types

Services discovery:
 * UPnP service discovery
 * Bonjour service discovery using avahi (Linux only)

Video Filters:
 * RSS feed overlay

Stream output:
 * New shout output module to forward streams to icecast servers
 * Fixed several SAP and SDP announcement bugs
 
Interfaces:
 * Mac OS X
    - New streaming and transcoding wizard
    - New extended controls panel
    - New bookmarks window
    - Fixed playlist sorting
    - Fixed drag-and-drop inside the playlist
 * wxWidgets
    - Rename wxWindows interface in wxWidgets.
    - All the --wxwin-* options are now --wx-*
    - VLC update checker
    - Now require wx2.6 with Unicode support
 * Skins2
    - Tree playlist
 * HTTP
    - New RPN functions to control VLC features (see play-howto)
    - Facilities to correctly handle non-ASCII characters and spaces in
      the names of files
    - Include macro to include other files
    - CGI 1.0 support

ActiveX plugin:
* Should now work outside IE as well

Mac OS X port:
* New script to delete the preferences automatically

Translations:
 The following languages were added:
 * Korean
 * Romanian

Changes between 0.8.1 and 0.8.2:
--------------------------------

Core support:
 * Rewrite of the playlist
    - Tree structure
    - Input preparsing (for meta-data)
    - Grouping (by artist, ...) support 
 * Preferences improvements: 
    - New organization, designed to improve usability
    - New configuration types (list of modules, ...)
 * XML parsers
 * Core image manipulation support
 * Client-side SSL/TLS support
 * SSL Client certificates checking support (allows for secure VoD)